Refactor/Cleanup